[tool.poetry]
name = "tests"
version = "0.0.1"
description = "OTT test tools"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozilla 2.x"
readme = "README.md"
packages = [{include = "ott/tests"}]

[tool.poetry.dependencies]
python = "^3.8"
mako = "1.2.3"
requests = "^2.32.0"
mergedeep = "^1.3.4"
PyYAML = "^6.0"
colorama = "^0.4.5"
"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch="rtp"}

[tool.poetry.scripts]
smoke_tests = "ott.tests.otp.test:smoke"
uptime_tests = "ott.tests.otp.test:uptime"
all_tests = "ott.tests.otp.test:all"
plan_trip = "ott.tests.otp.test:plan"

perf_test = "ott.tests.otp.perf:main"
stress_test = "ott.tests.otp.stress:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
