[tool.poetry]
name = "tests"
version = "0.0.1"
description = "OTT test tools"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozilla 2.x"
readme = "README.md"
packages = [{include = "ott/tests"}]

[tool.poetry.dependencies]
python = "^3.8"
mako = "1.2.3"
requests = "^2.32.0"
mergedeep = "^1.3.4"
PyYAML = "^6.0"
colorama = "^0.4.5"
"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch="rtp"}

[tool.poetry.scripts]
otp-planner = "ott.tests.otp.test:plan"
otp-all = "ott.tests.otp.test:all"
otp-smoke = "ott.tests.otp.test:smoke"
otp-perf = "ott.tests.otp.perf:main"
otp-stress = "ott.tests.otp.stress:main"
otp-uptime = "ott.tests.otp.test:uptime"

geo-stress = "ott.tests.geo.stress:main"

demo-stress = "ott.tests.utils.threads:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
