[tool.poetry]
name = "tests"
version = "0.0.2"
description = "OTT test tools"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozilla 2.x"
readme = "README.md"
packages = [{include = "ott/tests"}]

[tool.poetry.dependencies]
python = "^3.9"
mako = "1.2.3"
requests = "^2.32.0"
mergedeep = "^1.3.4"
PyYAML = "^6.0"
colorama = "^0.4.5"

"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch="rtp"}
#"ott.utils" = { path = "../utils/", develop = true }

[tool.poetry.scripts]
otp-planner = "ott.tests.otp.test:plan"
otp-all = "ott.tests.otp.test:all"
otp-smoke = "ott.tests.otp.test:smoke"
otp-perf = "ott.tests.otp.perf:main"
otp-stress = "ott.tests.otp.stress:main"
otp-uptime = "ott.tests.otp.test:uptime"

geo-tiles-stress = "ott.tests.geo.stress:VectorThreads.run_stress_test"
geo-patterns-stress = "ott.tests.geo.stress:PatternThreads.run_stress_test"

pelias-autocomplete-stress = "ott.tests.pelias.stress:AutocompleteThreads.run_stress_test"
pelias-reverse-stress = "ott.tests.pelias.stress:ReverseThreads.run_stress_test"

demo-stress = "ott.tests.utils.threads:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
